Modified margins between stats value and prevent big player names to overflow (ex. Antetokounmpo)

--- a/src/components/home/home.component.css
+++ b/src/components/home/home.component.css
@@ -15,6 +15,14 @@ div.card ul > li span.player-team-name {
   word-break: break-word;
 }
 
+div.card ul > li span.player-team-name > span {
+  display: inline-block;
+  width: 75%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 div.card ul > li span.player-team-name > span > img {
   height: 50px;
 }
@@ -22,5 +30,5 @@ div.card ul > li span.player-team-name > span > img {
 div.card ul > li span.category-stat {
   font-weight: bold;
   float: right;
-  margin-top: 4%;
+  margin-top: 0.8rem!important;
 }
